--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grassmudhorseui",
+  "name": "merinoui",
   "version": "1.0.0",
   "description": "Framework agnostic UI component collection",
   "main": "index.js",
