--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
       "email": "stevenzhang717@gmail.com"
     }
   ],
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.18.8",
     "cross-env": "^4.0.0",
     "cypress": "^0.10.1",
-    "gulp": "^3.9.1",
-    "jest": "^19.0.2"
-  },
-  "dependencies": {
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-security": "^1.3.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
+    "jest": "^19.0.2"
   }
 }
