--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.8",
     "cross-env": "^4.0.0",
     "cypress": "^0.10.1",
