--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-security": "^1.3.0",
     "eslint-plugin-standard": "^3.0.1",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-eslint": "^3.0.1",
     "gulp-sass": "^3.1.0",
     "jest": "^19.0.2"
