--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "license": "MIT",
   "devDependencies": {
     "babel": "^6.23.0",
+    "babel-plugin-transform-inline-localize-css-import": "^1.0.2",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "babel-preset-es2016": "^6.24.1",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.18.8",
     "cross-env": "^4.0.0",
     "cypress": "^0.10.1",
@@ -29,8 +33,18 @@
     "eslint-plugin-standard": "^3.0.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-browserify": "^0.5.1",
     "gulp-eslint": "^3.0.1",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.1.0",
-    "jest": "^19.0.2"
+    "gulp-sourcemaps": "^2.6.0",
+    "jest": "^19.0.2",
+    "node-sass": "^4.5.2",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0"
+  },
+  "dependencies": {
+    "gulp-rollup": "^2.11.0"
   }
 }
