--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,3 @@
 {
-  "presets": ["es2015"],
-  "plugins": [
-    ["babel-plugin-transform-inline-localize-css-import", {
-      "localFormat": "$token"
-    }]
-  ]
+  "presets": ["es2015"]
 }
