--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": "standard",
   "rules": {
-    "semi": ["error", "always"]
+    "semi": ["error", "always"],
+    "no-useless-constructor": 0
   },
   "globals": {
     "HTMLElement": true,
