postcss added with rucksack support

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-browserify": "^0.5.1",
     "gulp-eslint": "^3.0.1",
+    "gulp-postcss": "^6.4.0",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
@@ -44,7 +45,8 @@
     "node-sass": "^4.5.2",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0"
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rucksack-css": "^0.9.1"
   },
   "dependencies": {
     "gulp-rollup": "^2.11.0"
