--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-plugin-transform-inline-localize-css-import": "^1.0.2",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-es2016": "^6.24.1",
@@ -46,9 +47,9 @@
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rucksack-css": "^0.9.1"
+    "rucksack-css": "^0.9.1",
+    "gulp-rollup": "^2.11.0"
   },
   "dependencies": {
-    "gulp-rollup": "^2.11.0"
   }
 }
