--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development gulp serve",
-    "lint": "cross-env NODE_ENV=development gulp lint",
+    "lint": "cross-env NODE_ENV=development gulp lint:js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jason Shin <visualbbasic@gmail.com>",
