--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
   "globals": {
     "HTMLElement": true,
     "customElements": true,
-    "HTMLButtonElement": true
+    "HTMLButtonElement": true,
+    "HTMLInputElement": true
   },
   "plugins": ["security"]
 }
